crates/backyard-parser/tests/snapshots/uses__alias.snap
---
source: crates/backyard-parser/tests/uses.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: use
    name: ~
    items:
      - node_type: use_item
        modifier: Const
        name: "A\\B"
        alias:
          node_type: identifier
          name: A
          loc:
            start:
              line: 1
              column: 17
              offset: 17
            end:
              line: 1
              column: 18
              offset: 18
          leadings: []
          trailings: []
        loc:
          start:
            line: 1
            column: 4
            offset: 4
          end:
            line: 1
            column: 17
            offset: 17
        leadings: []
        trailings: []
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 18
        offset: 18
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 18
    offset: 18
leadings: []
trailings: []
