crates/backyard-parser/tests/snapshots/uses__basic.snap
---
source: crates/backyard-parser/tests/uses.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: use
    name: ~
    items:
      - node_type: use_item
        modifier: Const
        name:
          - 65
          - 92
          - 66
        alias: ~
        loc:
          start:
            line: 1
            column: 4
            offset: 4
          end:
            line: 1
            column: 10
            offset: 10
        leadings: ~
        trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 13
        offset: 13
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 13
    offset: 13
leadings: ~
trailings: ~
