crates/backyard-parser/tests/snapshots/uses__items.snap
---
source: crates/backyard-parser/tests/uses.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: use
    name:
      - 65
      - 112
      - 112
      - 92
      - 77
      - 111
      - 100
      - 101
      - 108
      - 115
      - 92
    items:
      - node_type: use_item
        modifier: Const
        name:
          - 85
          - 115
          - 101
          - 114
          - 92
          - 85
          - 115
          - 101
          - 114
          - 84
          - 101
          - 115
          - 116
          - 105
          - 110
          - 103
        alias:
          node_type: identifier
          name:
            - 85
            - 115
            - 101
            - 114
            - 84
            - 101
            - 115
            - 116
            - 105
            - 110
            - 103
            - 65
          loc:
            start:
              line: 2
              column: 28
              offset: 45
            end:
              line: 2
              column: 40
              offset: 57
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 2
            column: 2
            offset: 19
          end:
            line: 2
            column: 28
            offset: 45
        leadings: ~
        trailings: ~
      - node_type: use_item
        modifier: ~
        name:
          - 85
          - 115
          - 101
          - 114
          - 92
          - 85
          - 115
          - 101
          - 114
          - 84
          - 101
          - 115
          - 116
          - 105
          - 110
          - 103
          - 66
        alias:
          node_type: identifier
          name:
            - 85
            - 115
            - 101
            - 114
            - 84
            - 101
            - 115
            - 116
            - 105
            - 110
            - 103
            - 66
          loc:
            start:
              line: 3
              column: 23
              offset: 82
            end:
              line: 3
              column: 35
              offset: 94
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 3
            column: 2
            offset: 61
          end:
            line: 3
            column: 23
            offset: 82
        leadings: ~
        trailings: ~
      - node_type: use_item
        modifier: Function
        name:
          - 85
          - 115
          - 101
          - 114
          - 84
          - 101
          - 115
          - 116
          - 105
          - 110
          - 103
          - 67
        alias: ~
        loc:
          start:
            line: 4
            column: 2
            offset: 98
          end:
            line: 4
            column: 11
            offset: 107
        leadings: ~
        trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 5
        column: 0
        offset: 120
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 5
    column: 1
    offset: 121
leadings: ~
trailings: ~
