crates/backyard-parser/tests/snapshots/uses__multiple.snap
---
source: crates/backyard-parser/tests/uses.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: use
    name: ~
    items:
      - node_type: use_item
        modifier: ~
        name:
          - 65
          - 92
          - 66
        alias:
          node_type: identifier
          name:
            - 65
          loc:
            start:
              line: 1
              column: 11
              offset: 11
            end:
              line: 1
              column: 12
              offset: 12
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 4
            offset: 4
          end:
            line: 1
            column: 11
            offset: 11
        leadings: ~
        trailings: ~
      - node_type: use_item
        modifier: ~
        name:
          - 66
          - 92
          - 67
        alias:
          node_type: identifier
          name:
            - 66
          loc:
            start:
              line: 1
              column: 21
              offset: 21
            end:
              line: 1
              column: 22
              offset: 22
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 14
            offset: 14
          end:
            line: 1
            column: 21
            offset: 21
        leadings: ~
        trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 22
        offset: 22
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 22
    offset: 22
leadings: ~
trailings: ~
